--- a/msuser/deployment.yaml
+++ b/msuser/deployment.yaml
@@ -24,3 +24,11 @@ spec:
               value: Development
             - name: ASPNETCORE_URLS
               value: http://+:8080;http://+:8081
+          resources:
+            requests:        # minimum garanti
+              cpu: "100m"    # 0.1 core
+              memory: "128Mi"
+            limits:          # maximum autorisé
+              cpu: "500m"    # 0.5 core
+              memory: "256Mi"
+
